experimental/parser/testdata/lexer/numbers/exotic-base.proto.stderr.txt
error: unexpected characters in floating-point literal
  --> testdata/lexer/numbers/exotic-base.proto:6:1
   |
 6 | 0x10203.4
   | ^^^^^^^^^

error: unexpected characters in floating-point literal
  --> testdata/lexer/numbers/exotic-base.proto:7:1
   |
 7 | 0X12.ffP10
   | ^^^^^^^^^^

encountered 2 errors
